# eai

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES  build.rs  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
homebrew-tap/Formula/: eai.rb
src/: aliases.rs  app.rs  cache.rs  cli.rs  config.rs  history.rs  main.rs  search.rs  setup.rs  tldr.rs  tool_context.rs  types.rs  ui.rs  update.rs
src/llm/: claude.rs  mod.rs  ollama.rs  openai.rs
tests/e2e/: eai.robot  install_flow.robot
