[package]
name = "eai"
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
description = "Natural language to shell commands"
license = "MIT"
repository = "https://github.com/feliperbroering/eai"
homepage = "https://github.com/feliperbroering/eai"
readme = "README.md"
keywords = ["cli", "shell", "ai", "llm", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.6.2"
console = "0.15"
dialoguer = "0.11"
dirs = "6.0"
futures = "0.3.32"
indicatif = "0.17"
regex-lite = "0.1.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "time", "io-std", "io-util"] }
toml = "0.9"
which = "8.0"
zstd = { version = "0.13.3", features = ["default"] }

[build-dependencies]
bincode = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = "7.2.0"
zstd = "0.13.3"
